implement generated interfaces on go server and use generated api calls on frontend
- rename one of the apis to the appropriate path
- make some adjustments to int type to int32 on openapi spec
- create some components for responses
